<resources>
    <string name="app_name">purple_butterfly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splashScreenLogo" />
    <string name="profilePicture">profilePicture</string>
    <string name="location">location of operation</string>
    <string name="displayName">displayName</string>
    <string name="workLocation">location (City, Country)</string>
    <string name="occupationalTherapists">OCCUPATIONAL THERAPISTS</string>
    <string name="logIn">LOG IN PAGE</string>
    <string name="enterYourEmail">Enter Your email</string>
    <string name="enterYourPassword">Enter your Password</string>
    <string name="forgotPassword">Forgot your Password?</string>
    <string name="signUp">SIGN UP</string>
    <string name="login">LOG IN</string>
    <string name="personalDescription">Using a few words, type a description of your self here</string>
    <string name="registrationNumber">Registration Number.</string>
    <string name="signUpPage">MEDICAL PRACTITIONERS ONLY</string>
    <string name="enterFirstName">Enter First Name</string>
    <string name="enterLastName">Enter Last Name</string>
    <string name="enterEmailHere">Enter Your Email Here</string>
    <string name="createYourPassword">Create a Password</string>
    <string name="confirmPassword">Confirm Your Password Here</string>
    <string name="enterYourProfession">Choose your Profession</string>
    <string name="typeRegistrationNumberHere">Type Your Registration Number Here</string>
    <string name="displayProfessionTitle">displayProfession/Title</string>
    <string name="poweredBy">Powered by SOFT RIVER TECHNOLOGY HUB</string>
    <string name="individualSignUp">SIGN UP as a Non-medical practitioner</string>
    <string name="organizationSignUp">SIGN UP as a Business/ Organization</string>
    <string name="medicalPractitionerSignUp">SIGN UP as a Medical Practitioner</string>
    <string name="previousButtonSignUpOptionsPage">BACK</string>
    <string name="backArrow">BACK</string>
    <string name="nextMedicalPractitionerSignUpButton">NEXT</string>
    <string name="nonMedicalPractitionerSignUpPage" />
    <string name="forOrganizationsOnly">FOR ORGANIZATIONS ONLY</string>
    <string name="organizationMessage">Organizations/ Businesses will be required to register official business name and business ID and then pay 20,000/= (Uganda Shillings) per month. Each month starts on 1st and ends on last day of that month\n</string>
    <string name="organizationName">Enter Organization Name</string>
    <string name="organizationRegistrationNumber">Enter Organization Registration Number</string>
    <string name="organizationLocation">Enter Organization Location\n(City, Country) format</string>
    <string name="organizationEmail">Enter Organization Email</string>
    <string name="createOrganizationPassword">Create Organization Password</string>
    <string name="confirmOrganizationPassword">Confirm Organization Password</string>
    <string name="nextOrganizationSignUpButton">NEXT</string>
    <string name="backOrganizationSignUpButton">BACK</string>
    <string name="nonMedicalPractitioner">NON MEDICAL PRACTITIONERS</string>
    <string name="firstNameNonMedicalPractitioner">Enter First Name</string>
    <string name="secondNameNonMedicalPractitioner">Enter Second Name</string>
    <string name="enterNonMedicalPractitionerEmail">Enter your email here</string>
    <string name="enterEmailNonMedicalPractitionerSignUp">Enter Your Email Here</string>
    <string name="createPasswordNonMedicalPractitionerSignUp">Create your Password</string>
    <string name="confirmPasswordNonMedicalPractitionerSignUp">Confirm Password</string>
    <string name="nonMedicalPractitionerSignUpNextButton">NEXT</string>
    <string name="nonMedicalPractitionerSignUpBackButton">BACK</string>
    <string name="workPlace">Name Of Your Work Place</string>
    <string name="nextButtonSpeechTherapistProfile">NEXT</string>
    <string name="backButtonSpeechTherapistPage">BACK</string>
    <string name="chatTab">Chat</string>
    <string name="SpeechTherapistGroup">Groups</string>
    <string name="frames">Frames</string>
    <string name="OccupationalTherapists">OCCUPATIONAL THERAPISTS</string>
    <string name="physiotherapists">PHYSIOTHERAPISTS</string>
    <string name="speechLanguageTherapist">SPEECH AND LANGUAGE THERAPISTS</string>
    <string name="organizations">ORGANIZATIONS</string>
    <string name="about">ABOUT US</string>
    <string name="menuTab">MENU</string>
    <string name="occupationalTherapistGroup">Group</string>
    <string name="occupationalTherapistFrames">Frames</string>
    <string name="occupationalTherapyFrames">Frames</string>
    <string name="ProfilePicture" />
</resources>