<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context=".MedicalPractitionerProfileFragment">

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="#4CAF50"
        android:backgroundTint="#4CAF50"
        android:contentDescription="@string/ProfilePicture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/displayName"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:text="@string/displayName"
        android:textColor="#01080E"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profilePicture"
        app:layout_constraintTop_toTopOf="@+id/profilePicture" />

    <TextView
        android:id="@+id/displayRegistrationNumber"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:hint="@string/registrationNumber"
        android:padding="5dp"
        android:textColor="#01080E"
        android:textColorHint="#01080E"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/displayName"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="@+id/displayName"
        app:layout_constraintTop_toBottomOf="@+id/displayName" />

    <TextView
        android:id="@+id/displayWorkLocation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:padding="2dp"
        android:shadowColor="#B8A9A9"
        android:text="@string/workLocation"
        android:textColor="#01080E"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/displayWorkPlace"
        app:layout_constraintStart_toStartOf="@+id/displayWorkPlace"
        app:layout_constraintTop_toBottomOf="@+id/displayWorkPlace" />

    <TextView
        android:id="@+id/displayWorkPlace"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/workPlace"
        android:padding="5dp"
        android:textColorHint="#01080E"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/displayName"
        app:layout_constraintStart_toStartOf="@+id/profilePicture"
        app:layout_constraintTop_toBottomOf="@+id/displayRegistrationNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>