<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAF50"
    tools:context=".LogInFragment" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/logIn"
        android:textColor="#01080E"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:autoLink="web|email"
        android:autoText="true"
        android:backgroundTint="#00BCD4"
        android:capitalize="none"
        android:clickable="false"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enterYourEmail"
        android:importantForAccessibility="yes"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="#01080E"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:autoText="true"
        android:clickable="false"
        android:contextClickable="false"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enterYourPassword"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="#01080E"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/enterEmail"
        app:layout_constraintStart_toStartOf="@+id/enterEmail"
        app:layout_constraintTop_toBottomOf="@+id/enterEmail" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="90dp"
        android:clickable="false"
        android:contextClickable="true"
        android:focusable="auto"
        android:focusableInTouchMode="true"
        android:linksClickable="true"
        android:text="@string/forgotPassword"
        android:textColor="#051545"
        android:textColorHighlight="#501EAA"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/enterPassword"
        app:layout_constraintStart_toStartOf="@+id/enterPassword"
        app:layout_constraintTop_toBottomOf="@+id/enterPassword" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:clickable="false"
        android:contextClickable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/enterPassword"
        app:layout_constraintStart_toStartOf="@+id/enterPassword"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:clickable="false"
        android:contextClickable="true"
        android:focusable="auto"
        android:focusableInTouchMode="true"
        android:selectAllOnFocus="false"
        android:text="@string/signUp"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>